--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
   <meta charset="utf-8" />
   <link rel="canonical" href="https://hangars-awnings-and-pergolas-in-kha.vercel.app/" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="author" content="مظلات ابها خميس مشيط ">
-<meta name="abstract" content="مظلات برجولات ابها خميس مشيط ">
-<meta property="og:locale" content="ar_AR">
+<meta property="og:locale" content="ar_SA">
 <meta property="og:type" content="website">
 <meta property="og:title" content="حداد خميس مشيط">
+<meta name="description" content="مظلات وبرجولات وهناجر في خميس مشيط وأبها. تركيب مظلات سيارات وحدائق وسواتر وهناجر بجودة عالية وأسعار مناسبة.">
  <title>مظلات برجولات خميس مشيط ابها - حداد </title>
   <link rel="stylesheet" href="style2.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -54,8 +53,8 @@
       "@type": "Offer",
       "itemOffered": {
         "@type": "Service",
-        "name": "هناجر",
-        "description": "تصنيع وتركيب هناجر مقاومة للحرارة والعوامل الجوية."
+        "name": "مظلات سيارات",
+        "description": "تصنيع وتركيب مظلات سيارات مقاومة للحرارة والعوامل الجوية."
       }
     },
     {
@@ -93,7 +92,6 @@
   ]
 }
 </script>
-  <!-- */<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;800&display=swap" rel="stylesheet">/* -->
 </head>
 <body>
   <header class="topbar">
@@ -109,44 +107,44 @@
           </div>
         </div>
         <div class="menu" id="mainMenu">  
-  <a href="#home">الرئيسية</a>  
+  <a href="index.html">الرئيسية</a>  
 
   <!-- قائمة مظلات -->
   <div class="dropdown">
     <div class="dropbtn">مظلات ▾</div>
     <div class="menu-items">
-      <a href="car-shades.html">مظلات سيارات</a>
-      <a href="pool-shades.html">مظلات مسابح</a>
-      <a href="pyramid-shades.html">مظلات هرمية</a>
-      <a href="school-shades.html">مظلات مدارس</a>
+      <a href="car-shades2.html">مظلات سيارات</a>
+      <a href="pool-shades2.html">مظلات مسابح</a>
+      <a href="pyramid-shades2.html">مظلات هرمية</a>
+      <a href="school-shades2.html">مظلات مدارس</a>
     </div>
   </div>
 
   <!-- برجولات -->
-  <a href="pergolas.html">برجولات</a>
+  <a href="pergolas2.html">برجولات</a>
 
   <!-- قائمة سواتر -->
   <div class="dropdown">
     <div class="dropbtn">سواتر ▾</div>
     <div class="menu-items">
-      <a href="yard-sater.html">سواتر أحواش</a>
-      <a href="fabric-sater.html">سواتر قماش</a>
-      <a href="iron-sater.html">سواتر حديد</a>
+      <a href="yard-sater2.html">سواتر أحواش</a>
+      <a href="fabric-sater2.html">سواتر قماش</a>
+      <a href="iron-sater2.html">سواتر حديد</a>
     </div>
   </div>
 
   <!-- هناجر -->
-  <a href="hangars.html">هناجر</a>
+  <a href="hangars2.html">هناجر</a>
 
   <!-- قرميد -->
-  <a href="ceramic.html">سندوتش بنل</a>
+  <a href="ceramic2.html">سندوتش بنل</a>
 
   <!-- المزيد -->
   <div class="dropdown">
     <div class="dropbtn">المزيد ▾</div>
     <div class="menu-items">
-      <a href="rail.html">درابزين</a>
-      <a href="tables.html">طاولات</a>
+      <a href="rail2.html">درابزين</a>
+      <a href="tables2.html">طاولات</a>
     </div>
   </div>
 </div>
@@ -217,66 +215,9 @@
   <img src="https://ik.imagekit.io/lx9tl2p3c/25.jpg?updatedAt=1763735160837" alt="سواتر خميس مشيط" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/26.jpg?updatedAt=1763734947282" alt="حداد خميس مشيط ابها" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/27.jpg?updatedAt=1763735051741" alt="سواتر" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/28.jpg" alt="سندوتش بنل" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/29.jpg?updatedAt=1763735074868" alt="سندوتش بنل" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/30.jpg?updatedAt=1763734971999" alt="برجولات" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/31.jpg?updatedAt=1763735154999" alt="قرميد" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/38.jpg?updatedAt=1763735063936" alt="سواتر" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/39.jpg?updatedAt=1763734991575" alt="هنجر" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/40.jpg?updatedAt=1763734909593" alt="هناجر" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/41.jpg?updatedAt=1763736152084" alt="قرميد" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/42.jpg?updatedAt=1763734962949" alt="سندوتش بنل" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/55.jpg?updatedAt=1763735152508" alt="طاولات" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/59.jpg?updatedAt=1763735180003" alt="مظلات سيارات" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/66.jpg?updatedAt=1763735154003" alt="مظلات حدائق" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/67.jpg?updatedAt=1763735159252" alt="ابها" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/68.jpg?updatedAt=1763735055082" alt="خميس مشيط" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/69.jpg?updatedAt=1763735142563" alt="مظلات" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/70.jpg?updatedAt=1763735124541" alt="برجولات" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/72.jpg?updatedAt=1763735100745" alt="مظلات" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/73.jpg?updatedAt=1763734981057" alt="برجولات" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/74.jpg?updatedAt=1763735124283" alt="خميس مشيط-ابها" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/75.jpg?updatedAt=1763735102861" alt="سواتر" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/76.jpg" alt="قرميد" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/77.jpg?updatedAt=1763735004411" alt="سندوتش بنل" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/78.jpg?updatedAt=1763735036320" alt="هنجر" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/79.jpg?updatedAt=1763734987648" alt="هناجر" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/80.jpg?updatedAt=1763734958095" alt="هناجر" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/81.jpg?updatedAt=1763734932038" alt="سواتر حدائق" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/82.jpg?updatedAt=1763735039061" alt="سواتر حديد" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/89.jpg" alt="حداد" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/90.jpg?updatedAt=1763735159209" alt="سواتر " class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/89.jpg?updatedAt=1763735139499" alt="مظلات مسابح" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/91.jpg?updatedAt=1763735107758" alt="مظلات هرمية" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/92.jpg?updatedAt=1763735087039" alt="مظلات مدارس" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/94.jpg?updatedAt=1763735108132" alt="سواتر قماش" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/95.jpg?updatedAt=1763735126413" alt="طاولات" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/96.jpg?updatedAt=1763735066553" alt="سندوتش بنل" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/97.jpg?updatedAt=1763735106759" alt="برجولات خميس مشيط" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/124.jpg?updatedAt=1763735194149" alt="مظلات خميس مشيط" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/125.jpg?updatedAt=1763735129305" alt="برجولات خميس مشيط" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/126.jpg?updatedAt=1763735194929" alt="ابها" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/127.jpg?updatedAt=1763735172422" alt="برجولات خميس مشيط" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/128.jpg?updatedAt=1763735202413" alt="حداد" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/129.jpg?updatedAt=1763735160067" alt="سندوتش بنل" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/123.jpg?updatedAt=1763735036843" alt="برجولات خميس مشيط" class="img-item">
-   <img src="https://ik.imagekit.io/lx9tl2p3c/110.jpg?updatedAt=1763735032426" alt="مظلات خميس مشيط" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/111.jpg?updatedAt=1763735032515" alt="برجولات خميس مشيط" class="img-item">
- <img src="https://ik.imagekit.io/lx9tl2p3c/171.jpg" alt="سواتر خميس مشيط" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/173.jpg" alt="سواتر خميس مشيط" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/183.jpg" alt="برجولات خميس مشيط" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/178.jpg" alt="مظلات خميس مشيط" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/170.jpg" alt="ابها خميس مشيط" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/185.jpg" alt="أبها خميس مشيط" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/177.jpg" alt="قرميد خميس مشيط" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/186.jpg" alt="درابزين خميس مشيط" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/176.jpg" alt="طاولات خميس مشيط" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/182.jpg" alt="برجولات خميس مشيط" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/180.jpg" alt="برجولات خميس مشيط" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/174.jpg" alt="برجولات خميس مشيط" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/172.jpg" alt="برجولات خميس مشيط" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/179.jpg" alt="برجولات خميس مشيط" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/181.jpg" alt="برجولات خميس مشيط" class="img-item">
 </div>
 
 <!-- نافذة Lightbox -->
@@ -296,23 +237,17 @@
     </section>
 
 
-<section style="margin-top:20px">
-  <h2>مظلات هناجر برجولات حداد خميس مشيط ابها</h2>
-  <p style="color:var(--muted); line-height:1.8">
-      نقدم خدمات تركيب جميع أنواع المظلات السواتر البرجولات في خميس مشيط وأبها
-      بجودة عالية وأسعار تنافسية. نقدم مظلات سيارات، مظلات حدائق، مظلات حديد،
-      مظلات قماش، برجولات خشبية وحديد، سواتر أحواش، وهناجر بمواصفات عالية.  
-      نعمل في جميع مناطق ابها بما فيها خميس مشيط، أبها، سراة عبيدة،
-      مع توفير ضمان وخامات ممتازة وتصاميم عصرية تلبي احتياجات المنازل والفلل
-      والاستراحات.
-  </p>
-</section>
 
 
     <!-- اختصارات لأقسام الصفحات الأخرى (نماذج) -->
     <section class="card" id="m1" style="margin-top:8px">
       <h3>مظلات سيارات</h3>
-      <p style="color:var(--muted)">مظلات سيارات نقوم بتركيب مظلات وسواتر خميس مشيط مظلات وسواتر حديد مظلات وسواتر خميس مشيط مظلات وسواتر قماش مظلات وسواتر مدارس مظلات وسواتر عسير خميس مشيط بأعلى جودة تصاميم متعددة ومبتكرة لجميع انواع المظلات مظلات تلبي جميع الاحتياجات مظلات حدائق احواش جلسات وباسعار تنافسية مظلات حديد مظلات حدائق مظلات قماش مظلات جلسات خارجية عسير خميس مشيط وجميع مدن المملكة .
+      <p style="color:var(--muted)">     نقدم خدمات تركيب جميع أنواع المظلات السواتر البرجولات في خميس مشيط وأبها
+      بجودة عالية وأسعار تنافسية. نقدم مظلات سيارات، مظلات حدائق، مظلات حديد،
+      مظلات قماش، برجولات خشبية وحديد، سواتر أحواش، وهناجر بمواصفات عالية.  
+      نعمل في جميع مناطق ابها بما فيها خميس مشيط، أبها، سراة عبيدة،
+      مع توفير ضمان وخامات ممتازة وتصاميم عصرية تلبي احتياجات المنازل والفلل
+      والاستراحات.
 
 </p>
     </section>
