--- a/pergolas2.html
+++ b/pergolas2.html
@@ -7,9 +7,8 @@
 <meta name="description" content="أفضل مظلات وسواتر وهناجر وبنل وبرجولات في خميس مشيط وأبها – تنفيذ احترافي وضمان وجودة عالية. اتصل الآن واحصل على أفضل الأسعار.">
 <meta name="keywords" content="مظلات, هناجر, بنل, برجولات, مظلات سيارات, مظلات حدائق, تركيب مظلات, مظلات خميس مشيط, مظلات أبها">
  <title>مظلات برجولات خميس مشيط ابها - حداد </title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style2.css">
 
-  <!-- */<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700;800&display=swap" rel="stylesheet">/* -->
 </head>
 <body>
   <header class="topbar">
@@ -20,7 +19,7 @@
               <img src="https://ik.imagekit.io/lx9tl2p3c/logo.jpg" alt="لوجو 1" class="">
           </div>          <div>
             <h1>مظلات وبرجولات وهناجر</h1>
-            <div style="font-size:12px;color:var(--muted);">خميس مشيط • أبها مؤسسة بدرية للمقاولات</div>
+            <div style="font-size:12px;color:var(--muted);">خميس مشيط • أبها مظلات برجولات سواتر</div>
           </div>
         </div>
 
@@ -31,38 +30,38 @@
   <div class="dropdown">
     <div class="dropbtn">مظلات ▾</div>
     <div class="menu-items">
-      <a href="car-shades.html">مظلات سيارات</a>
-      <a href="pool-shades.html">مظلات مسابح</a>
-      <a href="pyramid-shades.html">مظلات هرمية</a>
-      <a href="school-shades.html">مظلات مدارس</a>
+      <a href="car-shades2.html">مظلات سيارات</a>
+      <a href="pool-shades2.html">مظلات مسابح</a>
+      <a href="pyramid-shades2.html">مظلات هرمية</a>
+      <a href="school-shades2.html">مظلات مدارس</a>
     </div>
   </div>
 
   <!-- برجولات -->
-  <a href="pergolas.html">برجولات</a>
+  <a href="pergolas2.html">برجولات</a>
 
   <!-- قائمة سواتر -->
   <div class="dropdown">
     <div class="dropbtn">سواتر ▾</div>
     <div class="menu-items">
-      <a href="yard-sater.html">سواتر أحواش</a>
-      <a href="fabric-sater.html">سواتر قماش</a>
-      <a href="iron-sater.html">سواتر حديد</a>
+      <a href="yard-sater2.html">سواتر أحواش</a>
+      <a href="fabric-sater2.html">سواتر قماش</a>
+      <a href="iron-sater2.html">سواتر حديد</a>
     </div>
   </div>
 
   <!-- هناجر -->
-  <a href="hangars.html">هناجر</a>
+  <a href="hangars2.html">هناجر</a>
 
   <!-- قرميد -->
-  <a href="ceramic.html">سندوتش بنل</a>
+  <a href="ceramic2.html">سندوتش بنل</a>
 
   <!-- المزيد -->
   <div class="dropdown">
     <div class="dropbtn">المزيد ▾</div>
     <div class="menu-items">
-      <a href="rail.html">درابزين</a>
-      <a href="tables.html">طاولات</a>
+      <a href="rail2.html">درابزين</a>
+      <a href="tables2.html">طاولات</a>
     </div>
   </div>
 </div>
@@ -155,70 +154,14 @@
     <span id="next" class="arrow">&#10095;</span>
   </div>
 </div>
-      <!-- =================== معرض الفيديو ===================
-      <h3 style="margin-top:25px">فيديوهات للبرجولات</h3>
-      <h3 style="margin-top:25px">أضغط على الفيديوهات وشاهد المحتوى بكل وضوح</h3>
-
-
-      <div class="video-gallery">
-        <div><iframe src="https://streamable.com/3zvttz" class="videos-container"
-         width="400" height="300" 
-        frameborder="0" 
-        scrolling="no" 
-        allowfullscreen>
-      </iframe>
-      </div>
-      <div>
-      <iframe src="https://streamable.com/909v0t" class="videos-container"
-         width="400" height="300" 
-        frameborder="0" 
-        scrolling="no" 
-        allowfullscreen>
-      </iframe>
-        </div>
-        <div><iframe src="https://streamable.com/b1bidk" class="videos-container"
-         width="400" height="300" 
-        frameborder="0" 
-        scrolling="no" 
-        allowfullscreen>
-      </iframe>
-      </div>
-        <div><iframe src="https://streamable.com/4f0m0m" class="videos-container"
-         width="400" height="300" 
-        frameborder="0" 
-        scrolling="no" 
-        allowfullscreen>
-      </iframe>
-      </div>
-              <div><iframe src="https://streamable.com/3wgzxq" class="videos-container"
-         width="400" height="300" 
-        frameborder="0" 
-        scrolling="no" 
-        allowfullscreen>
-      </iframe>
-      </div>
-        <video src="https://ik.imagekit.io/lx9tl2p3c/43.mp4?updatedAt=1763735436143" class="vid-item" muted></video>
-        <div><iframe src="https://streamable.com/tufutc" class="videos-container"
-         width="400" height="300" 
-        frameborder="0" 
-        scrolling="no" 
-        allowfullscreen></iframe>
-      </div>
-      </div> -->
-
-  <!-- نافذة الفيديو -->
-<!-- <div id="videoLightbox" class="video-lightbox">
-    <span id="closeVideo" class="close">&times;</span>
-    <video id="videoPlayer" controls></video>
-</div> -->
     </div>
   </div>
 </section>
 
 <footer>
-  جميع الحقوق محفوظة لمؤسسة بدرية للمقاولات © 2025
+  جميع الحقوق محفوظة مظلات هناجر برجولات © 2025
 </footer>
 
-<script src="js.js" defer></script>
+<script src="js2.js" defer></script>
 </body>
 </html>
