--- a/index.html
+++ b/index.html
@@ -189,17 +189,17 @@
 <section class="hero">
   <div class="container">
   <div class="gallery">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/1.jpg?updatedAt=1763734897346" alt="مظلات" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/2.jpg?updatedAt=1763735077831" alt="مظلات" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/3.jpg?updatedAt=1763735078748" alt="هناجر" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/4.jpg?updatedAt=1763734901877" alt="هناجر" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/1.jpg?updatedAt=1763734897346" alt="مظلات حدائق" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/2.jpg?updatedAt=1763735077831" alt="مظلات سيارات" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/3.jpg?updatedAt=1763735078748" alt="تركيب هناجر" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/4.jpg?updatedAt=1763734901877" alt="افضل هناجر" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/5.jpg?updatedAt=1763734867755" alt="هناجر" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/6.jpg?updatedAt=1763734926546" alt="سندوتش بنل" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/7.jpg?updatedAt=1763734927744" alt="درابزين" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/9.jpg?updatedAt=1763734948354" alt="طاولات" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/10.jpg?updatedAt=1763734991658" alt="برجولات" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/11.jpg?updatedAt=1763734863117" alt="برجولات" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/12.jpg?updatedAt=1763734910069" alt="هناجر" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/6.jpg?updatedAt=1763734926546" alt="سندوتش بنل في خميس مشيط" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/7.jpg?updatedAt=1763734927744" alt="افضل درابزين" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/9.jpg?updatedAt=1763734948354" alt="طاولات مميزة" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/10.jpg?updatedAt=1763734991658" alt="برجولات حدائق" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/11.jpg?updatedAt=1763734863117" alt="برجولات خميس مشيط" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/12.jpg?updatedAt=1763734910069" alt="هناجر ابها " class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/13.jpg?updatedAt=1763734949633" alt="خميس مشيط" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/14.jpg?updatedAt=1763734870146" alt="خميس مشيط أبها" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/15.jpg?updatedAt=1763735026278" alt="ابها" class="img-item">
@@ -211,13 +211,13 @@
   <img src="https://ik.imagekit.io/lx9tl2p3c/21.jpg?updatedAt=1763734949589" alt="سواتر أحواش " class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/22.jpg?updatedAt=1763735025836" alt="سواتر احواش " class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/23.jpg?updatedAt=1763734924680" alt="سواتر حديد" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/24.jpg?updatedAt=1763734975282" alt="برجولات" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/24.jpg?updatedAt=1763734975282" alt="افضل برجولات" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/25.jpg?updatedAt=1763735160837" alt="سواتر خميس مشيط" class="img-item">
   <img src="https://ik.imagekit.io/lx9tl2p3c/26.jpg?updatedAt=1763734947282" alt="حداد خميس مشيط ابها" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/27.jpg?updatedAt=1763735051741" alt="سواتر" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/31.jpg?updatedAt=1763735154999" alt="قرميد" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/38.jpg?updatedAt=1763735063936" alt="سواتر" class="img-item">
-  <img src="https://ik.imagekit.io/lx9tl2p3c/39.jpg?updatedAt=1763734991575" alt="هنجر" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/27.jpg?updatedAt=1763735051741" alt="سواتر ابها " class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/31.jpg?updatedAt=1763735154999" alt="افضل قرميد" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/38.jpg?updatedAt=1763735063936" alt="افضل السواتر في خميس مشيط" class="img-item">
+  <img src="https://ik.imagekit.io/lx9tl2p3c/39.jpg?updatedAt=1763734991575" alt="برجولا مميزة" class="img-item">
 </div>
 
 <!-- نافذة Lightbox -->
