--- a/index3.html
+++ b/index3.html
@@ -11,7 +11,7 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="حداد خميس مشيط">
  <title>مظلات برجولات خميس مشيط ابها - حداد </title>
-  <link rel="stylesheet" href="style3.css">
+  <link rel="stylesheet" href="style2.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <script type="application/ld+json">
 {
@@ -109,44 +109,44 @@
           </div>
         </div>
         <div class="menu" id="mainMenu">  
-  <a href="#home">الرئيسية</a>  
+  <a href="index3.html">الرئيسية</a>  
 
   <!-- قائمة مظلات -->
   <div class="dropdown">
     <div class="dropbtn">مظلات ▾</div>
     <div class="menu-items">
-      <a href="car-shades.html">مظلات سيارات</a>
-      <a href="pool-shades.html">مظلات مسابح</a>
-      <a href="pyramid-shades.html">مظلات هرمية</a>
-      <a href="school-shades.html">مظلات مدارس</a>
+      <a href="car-shades2.html">مظلات سيارات</a>
+      <a href="pool-shades2.html">مظلات مسابح</a>
+      <a href="pyramid-shades2.html">مظلات هرمية</a>
+      <a href="school-shades2.html">مظلات مدارس</a>
     </div>
   </div>
 
   <!-- برجولات -->
-  <a href="pergolas.html">برجولات</a>
+  <a href="pergolas2.html">برجولات</a>
 
   <!-- قائمة سواتر -->
   <div class="dropdown">
     <div class="dropbtn">سواتر ▾</div>
     <div class="menu-items">
-      <a href="yard-sater.html">سواتر أحواش</a>
-      <a href="fabric-sater.html">سواتر قماش</a>
-      <a href="iron-sater.html">سواتر حديد</a>
+      <a href="yard-sater2.html">سواتر أحواش</a>
+      <a href="fabric-sater2.html">سواتر قماش</a>
+      <a href="iron-sater2.html">سواتر حديد</a>
     </div>
   </div>
 
   <!-- هناجر -->
-  <a href="hangars.html">هناجر</a>
+  <a href="hangars2.html">هناجر</a>
 
   <!-- قرميد -->
-  <a href="ceramic.html">سندوتش بنل</a>
+  <a href="ceramic2.html">سندوتش بنل</a>
 
   <!-- المزيد -->
   <div class="dropdown">
     <div class="dropbtn">المزيد ▾</div>
     <div class="menu-items">
-      <a href="rail.html">درابزين</a>
-      <a href="tables.html">طاولات</a>
+      <a href="rail2.html">درابزين</a>
+      <a href="tables2.html">طاولات</a>
     </div>
   </div>
 </div>
@@ -380,6 +380,6 @@
   </a>
 
 </div>
-  <script src="js3.js"></script>
+  <script src="js2.js"></script>
 </body>
 </html>
