--- a/school-shades2.html
+++ b/school-shades2.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8" />
     <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="canonical" href="https://hangars-awnings-and-pergolas-in-kha.vercel.app/school-shades2.html" />
+
  <title>مظلات برجولات خميس مشيط ابها - حداد </title>
   <link rel="stylesheet" href="style2.css">
 </head>
